# AppliedRoboticsStudentInterface

./: #aliases#  #filetuti.txt#  .gitignore  CMakeLists.txt  file.txt  file1.txt  file_123.txt  file_456.txt  file_789.txt  file_m0.txt  file_m1_v1.txt  file_m1_v1_v3.txt  file_m1_v3.txt  file_nuovo.txt  file_nuovo_1.txt  nuovo.cpp  prova_skip.txt  prova_skip_1.txt  prova_skip_2.txt  prova_skip_3.txt  to do list
include/: DataStructure.h  Dijkstra.h  Dubins.h  PathFinder.h  PlanPath_Interface.h  Voronoi.h  find_robot.hpp  process_Map.hpp  undistort_img.hpp
mappe/: map_1.sdf  map_2.sdf  map_3.sdf  map_4.sdf  map_5.sdf  map_6.sdf  mappa default
saved_images/: lista.xml
src/: .goutputstream-IKH3F0  CMakeCache.txt  Dijkstra.cpp  Dubins.cpp  Makefile  PathFinder.cpp  PlanPath_Interface.cpp  Voronoi.cpp  calibrate  cmake_install.cmake  conc_vect_algoritmo.cpp  default.xml  findRobot.cpp  find_robot.cpp  process_Map.cpp  process_Map_real.cpp  student_interface.cpp  undistort_img.cpp
strani_path/: file_1_3.txt  file_1_3_r0.txt  file_3_gate.txt  file_robot_1.txt  file_robot_3.txt  file_robot_gate.txt  file_robot_gate_mission_0.txt  quasi_giusto.txt
utils/: param.xml
